; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_NnPollingIpCombine.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_NnPollingIpCombine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32*, %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i64 }
%struct.TYPE_12__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @NnPollingIpCombine(%struct.TYPE_11__* %0) #0 {
  %2 = alloca %struct.TYPE_11__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_12__*, align 8
  %6 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %2, align 8
  %7 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %8 = icmp eq %struct.TYPE_11__* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %73

10:                                               ; preds = %1
  store i32* null, i32** %3, align 8
  store i64 0, i64* %4, align 8
  br label %11

11:                                               ; preds = %43, %10
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = call i64 @LIST_NUM(i32* %15)
  %17 = icmp slt i64 %12, %16
  br i1 %17, label %18, label %46

18:                                               ; preds = %11
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = load i64, i64* %4, align 8
  %23 = call %struct.TYPE_12__* @LIST_DATA(i32* %21, i64 %22)
  store %struct.TYPE_12__* %23, %struct.TYPE_12__** %5, align 8
  %24 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %28 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %27, i32 0, i32 1
  %29 = load %struct.TYPE_10__*, %struct.TYPE_10__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = icmp slt i64 %26, %31
  br i1 %32, label %33, label %42

33:                                               ; preds = %18
  %34 = load i32*, i32** %3, align 8
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %38

36:                                               ; preds = %33
  %37 = call i32* @NewListFast(i32* null)
  store i32* %37, i32** %3, align 8
  br label %38

38:                                               ; preds = %36, %33
  %39 = load i32*, i32** %3, align 8
  %40 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %41 = call i32 @Add(i32* %39, %struct.TYPE_12__* %40)
  br label %42

42:                                               ; preds = %38, %18
  br label %43

43:                                               ; preds = %42
  %44 = load i64, i64* %4, align 8
  %45 = add nsw i64 %44, 1
  store i64 %45, i64* %4, align 8
  br label %11

46:                                               ; preds = %11
  %47 = load i32*, i32** %3, align 8
  %48 = icmp ne i32* %47, null
  br i1 %48, label %49, label %73

49:                                               ; preds = %46
  store i64 0, i64* %4, align 8
  br label %50

50:                                               ; preds = %67, %49
  %51 = load i64, i64* %4, align 8
  %52 = load i32*, i32** %3, align 8
  %53 = call i64 @LIST_NUM(i32* %52)
  %54 = icmp slt i64 %51, %53
  br i1 %54, label %55, label %70

55:                                               ; preds = %50
  %56 = load i32*, i32** %3, align 8
  %57 = load i64, i64* %4, align 8
  %58 = call %struct.TYPE_12__* @LIST_DATA(i32* %56, i64 %57)
  store %struct.TYPE_12__* %58, %struct.TYPE_12__** %6, align 8
  %59 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %60 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %59, i32 0, i32 0
  %61 = load i32*, i32** %60, align 8
  %62 = load %struct.TYPE_12__*, %struct.TYPE_12__** %6, align 8
  %63 = call i32 @Delete(i32* %61, %struct.TYPE_12__* %62)
  %64 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %65 = load %struct.TYPE_12__*, %struct.TYPE_12__** %6, align 8
  %66 = call i32 @NnFreeIpCombine(%struct.TYPE_11__* %64, %struct.TYPE_12__* %65)
  br label %67

67:                                               ; preds = %55
  %68 = load i64, i64* %4, align 8
  %69 = add nsw i64 %68, 1
  store i64 %69, i64* %4, align 8
  br label %50

70:                                               ; preds = %50
  %71 = load i32*, i32** %3, align 8
  %72 = call i32 @ReleaseList(i32* %71)
  br label %73

73:                                               ; preds = %9, %70, %46
  ret void
}

declare dso_local i64 @LIST_NUM(i32*) #1

declare dso_local %struct.TYPE_12__* @LIST_DATA(i32*, i64) #1

declare dso_local i32* @NewListFast(i32*) #1

declare dso_local i32 @Add(i32*, %struct.TYPE_12__*) #1

declare dso_local i32 @Delete(i32*, %struct.TYPE_12__*) #1

declare dso_local i32 @NnFreeIpCombine(%struct.TYPE_11__*, %struct.TYPE_12__*) #1

declare dso_local i32 @ReleaseList(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
